fix: 엔티티 수정 및 관련코드 수정